@@ -6,6 +6,8 @@ Gora Change Log
 
 0.3 (trunk) Current Development:
 
+* GORA-146 HBaseStore does not properly set endkey (ferdy)
+
 * GORA-140 Requires some adjustments on dependency at gora-cassandra (kazk, lewismc)
 
 * GORA-138 gora-cassandra array type support: Double fix for GORA-81 Replace CassandraStore#addOrUpdateField with TypeInferringSerializer to take advantage of when the value is already of type ByteBuffer. (Kazuomi Kashii via lewismc)
